<resources>
    <string name="app_name">Prj_sala_33</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="logar">Logar</string>
    <string name="cancelar">Cancelar</string>
    <string name="historico_de_pedido">Historico de Pedido</string>
    <string name="solicitar_servico">Solicitar Serviço</string>
    <string name="efetuar_pedido">Efetuar pedido</string>
    <string name="cardapio">Cardapio</string>
    <string name="historico">Histórico</string>
    <string name="pedidos">Pedidos</string>
    <string name="servicos">Serviços</string>
</resources>
